correct search on mobile

--- a/search.css
+++ b/search.css
@@ -38,6 +38,7 @@ p {
 }
 
 .searchbar {
+    min-width: 100%;
     margin-top: 20px;
     height: 50px;
     background-color: #353b48;
@@ -49,25 +50,21 @@ p {
     color: white;
     padding: 0 10px;
     line-height: 40px;
+    white-space: nowrap;
 }
 
 .search_input {
+    min-width: 0;
     color: white;
     border: 0;
     outline: 0;
     background: none;
-    width: 0;
     caret-color: transparent;
     line-height: 40px;
     transition: width 0.4s linear;
 }
 
-.searchbar:hover>.search_input {
-    padding: 0 10px;
-    width: 300px;
-    caret-color: red;
-    transition: width 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
+
 
 .searchbar:hover>.search_icon {
     background: white;
@@ -77,10 +74,9 @@ p {
 .search_icon {
     height: 40px;
     width: 40px;
-    float: right;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* float: right; */
+    /* justify-content: center; */
+    /* align-items: center; */
     border-radius: 50%;
     color: white;
     text-decoration: none;
@@ -173,4 +169,24 @@ p {
 #logo {
     margin-top: 20px;
     max-width: 70px;
+}
+
+@media (min-width: 576px) {
+
+    .searchbar{
+        min-width: unset;
+    }
+
+    .search_input {
+        flex-grow: 0;
+        width: 0;
+    }
+
+    .searchbar:hover>.search_input {
+        padding: 0 10px;
+        width: 300px;
+        caret-color: red;
+        transition: width 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
+    }
+
 }
